stop boxLabel from covering mobile dropdown navigation

--- a/ubyssey/static_src/src/styles/modules/_homepage.scss
+++ b/ubyssey/static_src/src/styles/modules/_homepage.scss
@@ -671,7 +671,7 @@ ol.article-list {
 }
 
 .boxLabel {
-  z-index: 100;
+  z-index: 3;
   display:flex;
   margin: auto;
   margin-bottom: 20px;
